Add interactive features: live visitor counter, scroll progress, social proof notifications, typing effects, easter egg

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                         <span><i class="fas fa-map-marker-alt me-2"></i>Based in Cranston, RI &mdash; Same-Day On-Site Support</span>
                         <span class="mx-3">|</span>
                         <span class="trust-badge"><i class="fas fa-fire me-1"></i>3 Client Spots Left This Month</span>
+                        <span class="mx-3">|</span>
+                        <span class="live-visitors"><i class="fas fa-eye me-1"></i><span id="visitorCount">12</span> viewing now</span>
                     </div>
                 </div>
                 <div class="col-md-6 text-md-end text-center">
