--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-graduation-cap me-1"></i>Learn AI</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="learn-agents.html"><i class="fas fa-robot me-2 text-primary"></i>Understanding AI Agents <span class="badge bg-success ms-2">Free</span></a></li>
+                            <li><a class="dropdown-item" href="guide-clawdbot.html"><i class="fas fa-server me-2 text-primary"></i>Clawdbot AWS Setup Guide <span class="badge bg-warning ms-2">$2.99</span></a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#case-study">Case Study</a></li>
@@ -725,6 +726,37 @@
                                 <i class="fas fa-phone me-2"></i>Call (401) 327-2971
                             </a>
                             <p class="mt-2 mb-0 small opacity-75">Or email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b7d9ded4dcd5dedbd8d3d2d6c286868287f7ced6dfd8d899d4d8da">[email&#160;protected]</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Guides & Resources Section -->
+        <section id="guides" class="guides-section py-6" style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);">
+            <div class="container">
+                <div class="section-header text-center mb-5">
+                    <span class="section-badge">Resources</span>
+                    <h2 class="section-title">Premium Guides & Tutorials</h2>
+                    <p class="section-subtitle">Step-by-step guides to help you implement powerful AI tools in your business.</p>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 col-md-8">
+                        <div class="service-card" style="border: 2px solid var(--primary); background: white;">
+                            <div class="featured-badge" style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);">New Guide</div>
+                            <div class="service-icon" style="background: linear-gradient(135deg, #8b5cf6 0%, #6366f1 100%);">
+                                <i class="fas fa-robot"></i>
+                            </div>
+                            <h3>Clawdbot AWS Setup Guide</h3>
+                            <p>Learn how to deploy your own AI WhatsApp assistant on AWS. Complete 22-step guide covering EC2 setup, Node.js installation, VNC desktop access, and Chrome extension configuration.</p>
+                            <div class="service-price">
+                                <span class="price-label">Part 1 Free</span>
+                                <span class="price-value">$2.99</span>
+                                <span class="price-compare">Full access</span>
+                            </div>
+                            <a href="guide-clawdbot.html" class="service-link">
+                                View Guide <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
