--- a/restaurant-scheduler.html
+++ b/restaurant-scheduler.html
@@ -3161,11 +3161,14 @@
             try {
                 await window.firebaseSignIn(window.firebaseAuth, email, password);
             } catch (error) {
+                console.error('Login error:', error.code, error.message);
                 let message = 'Invalid email or password';
                 if (error.code === 'auth/user-not-found') message = 'No account found with this email';
                 else if (error.code === 'auth/wrong-password') message = 'Incorrect password';
                 else if (error.code === 'auth/invalid-credential') message = 'Invalid email or password';
+                else if (error.code === 'auth/invalid-email') message = 'Invalid email format';
                 else if (error.code === 'auth/too-many-requests') message = 'Too many attempts. Try again later.';
+                else message = `Error: ${error.code || error.message}`;
 
                 showError(message);
                 btn.disabled = false;
