Fix CaseVault calculator to use S3 data, remove hardcoded settlement counts

--- a/blog-ct-car-accident-settlements-2026.html
+++ b/blog-ct-car-accident-settlements-2026.html
@@ -379,7 +379,7 @@
 
         <div class="cta-box">
             <h3>See What Similar CT Cases Settled For</h3>
-            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Stop guessing. Our database of 1,756 New England settlements can help you understand your case value.</p>
+            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Stop guessing. Our database of New England settlements can help you understand your case value.</p>
             <a href="/contact" class="cta-button">Get Your Free Estimate</a>
         </div>
 
@@ -402,11 +402,11 @@
 
         <div class="cta-box">
             <h3>Know Your Case Value</h3>
-            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Our CaseVault database covers 1,756 New England settlements. Get data-driven insight into what your Connecticut case may be worth.</p>
+            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Our CaseVault database covers New England settlements. Get data-driven insight into what your Connecticut case may be worth.</p>
             <a href="/contact" class="cta-button">Contact Us for a Free Estimate</a>
         </div>
 
-        <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 3rem; border-top: 1px solid var(--border); padding-top: 1.5rem;"><em>Data source: CaseVault database of 1,756 verified New England settlements. Updated February 2026. This is educational information, not legal advice. Consult an attorney for your specific situation.</em></p>
+        <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 3rem; border-top: 1px solid var(--border); padding-top: 1.5rem;"><em>Data source: CaseVault database of verified New England settlements. Updated February 2026. This is educational information, not legal advice. Consult an attorney for your specific situation.</em></p>
 
         <h3 style="margin-top: 2rem;">Methodology</h3>
         <p>Our settlement data comes from publicly available court records, law firm published case results, news reports of settlements and verdicts, and bar association publications. All settlements are categorized by case type, injury severity, state, and outcome.</p>
