--- a/blog-ma-car-accident-settlements-2026.html
+++ b/blog-ma-car-accident-settlements-2026.html
@@ -349,7 +349,7 @@
 
         <div class="cta-box">
             <h3>Get Your Free Settlement Estimate</h3>
-            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Our calculator uses this same database of 1,756 New England settlements to estimate your settlement range.</p>
+            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Our calculator uses this same database of New England settlements to estimate your settlement range.</p>
             <a href="/contact" class="cta-button">Contact Us for a Free Estimate</a>
         </div>
 
@@ -448,11 +448,11 @@
 
         <div class="cta-box">
             <h3>See How Your Case Compares</h3>
-            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Stop guessing. Our database of 1,756 New England settlements can help estimate your specific case value.</p>
+            <p style="color: var(--text-muted); margin-bottom: 1.5rem;">Stop guessing. Our database of New England settlements can help estimate your specific case value.</p>
             <a href="/contact" class="cta-button">Get Your Free Estimate</a>
         </div>
 
-        <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 3rem; border-top: 1px solid var(--border); padding-top: 1.5rem;"><em>Data source: CaseVault database of 1,756 verified New England settlements. Updated February 2026. This is educational information, not legal advice. Consult an attorney for your specific situation.</em></p>
+        <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 3rem; border-top: 1px solid var(--border); padding-top: 1.5rem;"><em>Data source: CaseVault database of verified New England settlements. Updated February 2026. This is educational information, not legal advice. Consult an attorney for your specific situation.</em></p>
 
         <h3 style="margin-top: 2rem;">Methodology</h3>
         <p>Our settlement data comes from publicly available court records, law firm published case results, news reports of settlements and verdicts, and bar association publications. All settlements are categorized by case type, injury severity, state, and outcome.</p>
