--- a/casevault-calculator-redesigned.html
+++ b/casevault-calculator-redesigned.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settlement Calculator | CaseVault Insights</title>
-    <meta name="description" content="Estimate personal injury settlement values based on 1,756 real cases from MA, CT, RI & NH. Free calculator with access to benchmark data.">
+    <meta name="description" content="Estimate personal injury settlement values based on our growing database of real cases from MA, CT, RI & NH. Free calculator with access to benchmark data.">
     <link rel="canonical" href="https://aibridges.org/casevault-calculator">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/casevault-insights/casevault.css">
@@ -44,7 +44,7 @@
                 <span class="cv-gradient-text-blue">Settlement Calculator</span>
             </h1>
             <p class="cv-hero__subtitle">
-                Estimate settlement values using real benchmark data from <strong>1,756 cases</strong> across Massachusetts, Connecticut, Rhode Island & New Hampshire
+                Estimate settlement values using real benchmark data from <strong>our growing database of cases</strong> across Massachusetts, Connecticut, Rhode Island & New Hampshire
             </p>
         </div>
     </section>
@@ -54,7 +54,7 @@
         <div class="cv-container">
             <div class="cv-grid cv-grid-3">
                 <div class="cv-stat">
-                    <div class="cv-stat__value cv-stat__value--blue cv-mono">1,756</div>
+                    <div class="cv-stat__value cv-stat__value--blue cv-mono">our growing database of</div>
                     <div class="cv-stat__label">Settlement Cases</div>
                 </div>
                 <div class="cv-stat">
@@ -151,7 +151,7 @@
                         Want the full picture?
                     </h3>
                     <p class="cv-text-secondary" style="margin-bottom: var(--cv-space-lg);">
-                        Explore the full dashboard with state benchmarks, case type breakdowns, and settlement trends from 1,756+ cases.
+                        Explore the full dashboard with state benchmarks, case type breakdowns, and settlement trends from our growing database of+ cases.
                     </p>
                     <a href="/dashboard" class="cv-btn cv-btn-gold cv-btn--lg">
                         <i class="fas fa-chart-line"></i>
@@ -198,7 +198,7 @@
                     </div>
                     <div>
                         <div class="cv-trust-item__title">Real Data</div>
-                        <div class="cv-trust-item__desc">1,756+ verified settlements from court records and law firm contributions</div>
+                        <div class="cv-trust-item__desc">our growing database of+ verified settlements from court records and law firm contributions</div>
                     </div>
                 </div>
                 <div class="cv-trust-item">
