--- a/casevault-contribute.html
+++ b/casevault-contribute.html
@@ -117,7 +117,7 @@
             <h3>📊 Why Contribute?</h3>
             <p>
                 Your data helps build a more comprehensive settlement database. In return, you get 10 minutes
-                of full dashboard access to explore benchmarks, trends, and insights from 1,756+ cases.
+                of full dashboard access to explore benchmarks, trends, and insights from our growing database of+ cases.
             </p>
         </div>
 
