--- a/casevault-dashboard-redesigned.html
+++ b/casevault-dashboard-redesigned.html
@@ -67,7 +67,7 @@
                 Settlement Dashboard
             </h1>
             <p class="cv-hero__subtitle">
-                Live benchmark data from <strong class="cv-text-blue">1,756</strong> personal injury settlements across New England
+                Live benchmark data from <strong class="cv-text-blue">our growing database of</strong> personal injury settlements across New England
             </p>
         </div>
     </section>
@@ -116,7 +116,7 @@
         <div class="cv-grid cv-grid-3 cv-mb-xl">
             <div class="cv-card cv-card--highlight">
                 <div class="cv-label cv-mb-sm">Total Settlements</div>
-                <div class="cv-stat__value cv-stat__value--large cv-stat__value--blue" id="totalCases">1,756</div>
+                <div class="cv-stat__value cv-stat__value--large cv-stat__value--blue" id="totalCases">our growing database of</div>
                 <div class="cv-stat__label">Across 4 states</div>
             </div>
             <div class="cv-card">
@@ -233,7 +233,7 @@
                 </tbody>
             </table>
             <p class="cv-text-center cv-text-muted cv-mt-lg" style="font-size: var(--cv-text-xs);">
-                Showing 5 of 1,756 total settlements
+                Showing 5 of our growing database of total settlements
             </p>
         </div>
 
