--- a/casevault-dashboard.html
+++ b/casevault-dashboard.html
@@ -193,7 +193,7 @@
     <div class="dashboard-header">
         <div class="dashboard-container">
             <h1 style="font-size: 36px; margin-bottom: 12px;">⚖️ CaseVault Settlement Dashboard</h1>
-            <p style="opacity: 0.9; font-size: 18px;">Live benchmark data from 1,756 personal injury settlements</p>
+            <p style="opacity: 0.9; font-size: 18px;">Live benchmark data from our growing database of personal injury settlements</p>
         </div>
     </div>
 
@@ -238,7 +238,7 @@
         <div class="dashboard-grid">
             <div class="dashboard-card">
                 <h3>Total Settlements</h3>
-                <div class="metric-large" id="totalCases">1,756</div>
+                <div class="metric-large" id="totalCases">our growing database of</div>
                 <div class="metric-label">Across 4 states</div>
             </div>
             <div class="dashboard-card">
@@ -342,7 +342,7 @@
                 </tbody>
             </table>
             <p style="text-align: center; margin-top: 20px; color: #64748b; font-size: 14px;">
-                Showing 5 of 1,756 total settlements
+                Showing 5 of our growing database of total settlements
             </p>
         </div>
 
